otelcollector/k8s-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otelcollector
  namespace: otelcollector
  labels:
    app: otelcollector
spec:
  replicas: 3
  selector:
    matchLabels:
      app: otelcollector
  template:
    metadata:
      labels:
        app: otelcollector
    spec:
      serviceAccountName: default
      containers:
        - name: otelcollector
          image: "otel/opentelemetry-collector-contrib:0.115.1"
          imagePullPolicy: IfNotPresent
          ports:
          - name: otlp-grpc
            containerPort: 4317
            protocol: TCP
          - name: otlp-http
            containerPort: 4318
            protocol: TCP
          - name: health-http
            containerPort: 13133
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 13133
          readinessProbe:
            httpGet:
              path: /
              port: 13133
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 300m
              memory: 512Mi
          volumeMounts:
          - name: otelcollector
            mountPath: /etc/otelcol-contrib/config.yaml
            subPath: config.yaml
      volumes:
      - name: otelcollector
        configMap:
          name: otelcollector
